# aaa-tools

./: .coverage  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.2.md  ROADMAP.md  SECURITY.md  aaa_cli.py  pyproject.toml  test_interactive.py
.aaa/: metadata.json  registry_index.json
.github/: pull_request_template.md
aaa/: __init__.py  action_registry.py  agent_delegation_and_task_lifecycle_runtime.py  audit_commands.py  bootstrap_commands.py  check_commands.py  cli.py  context_runtime_preflight.py  github_governance_topology_composition_and_closeout.py  github_governance_topology_contract_baseline.py  governance_commands.py  governance_index.py  init_commands.py  intermediate_bundle_generation_baseline.py  jsonl.py  mcp_server.py  messages.py  multi_repo_worktree_identity.py  offering_package_composition_and_closeout.py  offering_package_definition_resolution.py  offering_package_materialization_and_bootstrap_mapping.py  offering_package_prerequisite_gate.py  offering_package_selection_runtime_baseline.py  offering_package_status_and_evidence_runtime.py  outdated.py  output_formatter.py  outside_in_validation_and_evidence_promotion_baseline.py  pack_commands.py  package_commands.py  package_machine_interface_read_boundary.py  permission_and_authorization_runtime_gate.py  query_orchestration_runtime.py  repo_check_runtime_adoption.py  result_artifact_eligibility_and_evidence_promotion_gate.py  runbook_registry.py  runbook_runtime.py  runtime_adoption_readiness_inspect.py  (+17 more)
docs/: aaa CLI 背景與使用說明.md  (+2 more)
(+298 files in other folders)
