[project]
name = "aaa-tools"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = ["typer>=0.12", "jsonschema>=4.21.1", "packaging>=23.0"]

[project.scripts]
aaa = "aaa.cli:app"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aaa", "aaa.*"]
